remane some block

--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
 
 <!--VISITORS_START-->
 
-        <section class="visitors">
-            <div class="title-visitors">
-                <p class="title-visitors__head">Engage Visitors</p>
-                <p class="title-visitors__subtitle">Understand your audience</p>
-                <p class="title-visitors__description">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
-                <div class="title-visitors__actions">
+        <section class="audiences">
+            <div class="title-audiences">
+                <p class="title-audiences__head">Engage Visitors</p>
+                <p class="title-audiences__subtitle">Understand your audience</p>
+                <p class="title-audiences__description">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
+                <div class="title-audiences__actions">
                     <button class="title-visitors__get-btn">Get Started</button>
                     <button class="title-visitors__learn-btn">Learn More</button>
                 </div>
