--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 <p class="title-audience__subtitle">Understand your audience</p>
                 <p class="title-audience__description">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
                 <div class="title-audience__actions">
-                    <button class="title-visitors__get-btn">Get Started</button>
-                    <button class="title-visitors__learn-btn">Learn More</button>
+                    <button class="title-audience__get-btn">Get Started</button>
+                    <button class="title-audience__learn-btn">Learn More</button>
                 </div>
             </div>
             <div class="screen">
