--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
             </div>
             <div class="screen">
                 <div class="screen__inside">
-                    <img class="screen__img" src="./images/visitors/deveopers.png" alt="developers">
+                    <img class="screen__img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png" alt="developers">
                     <p class="screen__name">Developers</p>
                 </div>
                 <div class="screen__inside">
-                    <img class="screen__img" src="./images/visitors/entertainment.png" alt="Entertainment">
+                    <img class="screen__img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png" alt="Entertainment">
                     <p class="screen__name">Entertainment</p>
                 </div>
                 <div class="screen__inside">
-                    <img class="screen__img" src="./images/visitors/athletes.png" alt="Athletes">
+                    <img class="screen__img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png" alt="Athletes">
                     <p class="screen__name">Athletes</p>
                 </div>
                 <div class="screen__inside">
-                    <img class="screen__img" src="./images/visitors/creators.png" alt="Creators">
+                    <img class="screen__img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png" alt="Creators">
                     <p class="screen__name">Creators</p>
                 </div>
             </div>
