--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                     <a href="#" class="footer-navigation__items">License</a>
                 </div>
                 <div class="footer-icons">
-                    <a href="#"><img class="footer-icons__links" src="./images/footer/social-twitter.png" alt="twitter"></a>
-                    <a href="#"><img class="footer-icons__links" src="./images/footer/social-fb.png" alt="facebook"></a>
-                    <a href="#"><img class="footer-icons__links" src="./images/footer/social-linkedIn.png" alt="linkedIn"></a>
+                    <a href="#"><img class="footer-icons__links" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png" alt="twitter"></a>
+                    <a href="#"><img class="footer-icons__links" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png" alt="facebook"></a>
+                    <a href="#"><img class="footer-icons__links" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png" alt="linkedIn"></a>
                 </div>
             </div>
         </footer>
