--- a/index.html
+++ b/index.html
@@ -222,20 +222,20 @@
 
 <!--FREE-TRIAL__START-->
 
-        <section class="free-trial">
-            <img class="logo-img" src="./images/free-trial/window.png" alt="window"> 
-            <div class="title-trial">
-                <p class="title-trial__subtitle">Built for busy small tearms</p>
-                <p class="title-trial__description">Three product that can be used independently or combined together for your company's needs</p>
+        <section class="order">
+            <img class="logo-img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png" alt="window"> 
+            <div class="title-order">
+                <p class="title-order__subtitle">Built for busy small tearms</p>
+                <p class="title-order__description">Three product that can be used independently or combined together for your company's needs</p>
                 <!--TWO_TITLES_FOR_DESKTOP-->
-                <p class="title-trial__subtitle-desktop">Start your free trial</p>
-                <p class="title-trial__description-desktop">Get notified about company apdates, news and block posts. We hate spam.</p>
+                <p class="title-order__subtitle-desktop">Start your free trial</p>
+                <p class="title-order__description-desktop">Get notified about company apdates, news and block posts. We hate spam.</p>
                 <!--THE_END-->
                 <div class="title-actions">
                     <input class="email" type="email" value="Enter your email">
                     <button class="get-btn">Get Started</button>
                 </div>
-                <p class="title-trial__short-desc">Free 14 day trial &#183 Easy setup &#183 Cancel any time. Check out <a class="trial-link" href="#">Terms of Use.</a></p>
+                <p class="title-order__short-desc">Free 14 day trial &#183 Easy setup &#183 Cancel any time. Check out <a class="order-link" href="#">Terms of Use.</a></p>
             </div>
         </section>
 
