--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                 <p class="title-order__subtitle">Built for busy small tearms</p>
                 <p class="title-order__description">Three product that can be used independently or combined together for your company's needs</p>
                 <!--TWO_TITLES_FOR_DESKTOP-->
-                <p class="title-order__subtitle-desktop">Start your free trial</p>
-                <p class="title-order__description-desktop">Get notified about company apdates, news and block posts. We hate spam.</p>
+                <!-- <p class="title-order__subtitle-desktop">Start your free trial</p>
+                <p class="title-order__description-desktop">Get notified about company apdates, news and block posts. We hate spam.</p> -->
                 <!--THE_END-->
                 <div class="title-actions">
                     <input class="email" type="email" value="Enter your email">
