--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <img class="logo-img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png" alt="window"> 
             <div class="title-order">
                 <p class="title-order__subtitle">Built for busy small tearms</p>
-                <p class="title-order__description">Three product that can be used independently or combined together for your company's needs</p>
+                <p class="title-order__description">Three product that can be used<br/>independently or combined together for your company's needs</p>
                 <!--TWO_TITLES_FOR_DESKTOP-->
                 <!-- <p class="title-order__subtitle-desktop">Start your free trial</p>
                 <p class="title-order__description-desktop">Get notified about company apdates, news and block posts. We hate spam.</p> -->
