--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <section class="top__section">
             <header class="header">
-                <img  class="logo__image" src="./images/header/logo_header.png" alt="logo">
+                <img  class="logo__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png" alt="logo">
                 <div class="logo__text">
                     <div class="logo__name">Foundation</div>
                     <div class="logo__description">Startup landing template</div>
@@ -44,7 +44,7 @@
                         <button class="headline__learn-more-btn">Learn More</button>
                     </div>
             </div>
-                <img class="headline__bunner" src="./images/headline/headline.png" alt="headline banner">
+                <img class="headline__bunner" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png" alt="headline banner">
         </section>
 
 <!--HEADLINE__END-->
